[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/WFCCollapser.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/WFCGenerateController.gd" type="Script" id=2]

[node name="HBoxContainer" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 252.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.33
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 232.0
margin_bottom = 560.0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 212.0
margin_bottom = 422.0
size_flags_vertical = 3

[node name="GenerateButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 430.0
margin_right = 212.0
margin_bottom = 467.0
text = "Generate"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 475.0
margin_right = 212.0
margin_bottom = 495.0
custom_constants/separation = 20

[node name="ResetButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 503.0
margin_right = 212.0
margin_bottom = 540.0
text = "Reset"

[node name="WFCCollapser" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 260.0
margin_right = 1024.0
margin_bottom = 600.0
image_data_idx = 2
num_cols = 6
num_rows = 4
allow_select_unavailable = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/GenerateButton" to="." method="_on_GenerateButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ResetButton" to="." method="_on_ResetButton_pressed"]
